# laravel-json-api/app/Http/Controllers/RastreabilidadeController.php
@@ -35,12 +35,11 @@ class RastreabilidadeController extends Controller
                         @OA\Property(property="data_geracao", type="string", description="Data de geração do produto ou registro", example="2022-01-01"),
                         @OA\Property(property="responsavel_criacao", type="string", description="Responsável pela criação do produto ou registro", example="example"),
                         @OA\Property(property="cliente_id", type="integer", description="Identificador do cliente relacionado (FK para clientes)", example=1),
-                        @OA\Property(property="estoque_id", type="integer", description="Identificador do item no estoque relacionado (FK para estoque)", example=1),
+                        @OA\Property(property="produto_id", type="integer", description="Identificador do item no estoque relacionado (FK para estoque)", example=1),
                         @OA\Property(property="pv", type="string", description="PV associado ao produto", example="example"),
                         @OA\Property(property="op", type="string", description="Ordem de produção associada ao produto", example="example"),
                         @OA\Property(property="codigo_net", type="integer", description="Código NET do produto", example=1),
                         @OA\Property(property="ref_sistema", type="string", description="Referência do sistema para o produto", example="example"),
-                        @OA\Property(property="produto", type="string", description="Descrição do produto", example="example"),
                         @OA\Property(property="obra_alocada", type="string", description="Obra onde o produto foi alocado", example="example"),
                         @OA\Property(property="n_fatura", type="string", description="Número da fatura associada ao produto", example="example"),
                         @OA\Property(property="data_enviado", type="string", description="Data de envio do produto", example="2022-01-01"),
@@ -103,12 +102,11 @@ class RastreabilidadeController extends Controller
                         @OA\Property(property="data_geracao", type="string", description="Data de geração do produto ou registro", example="2022-01-01"),
                         @OA\Property(property="responsavel_criacao", type="string", description="Responsável pela criação do produto ou registro", example="example"),
                         @OA\Property(property="cliente_id", type="integer", description="Identificador do cliente relacionado (FK para clientes)", example=1),
-                        @OA\Property(property="estoque_id", type="integer", description="Identificador do item no estoque relacionado (FK para estoque)", example=1),
+                        @OA\Property(property="produto_id", type="integer", description="Identificador do item no estoque relacionado (FK para estoque)", example=1),
                         @OA\Property(property="pv", type="string", description="PV associado ao produto", example="example"),
                         @OA\Property(property="op", type="string", description="Ordem de produção associada ao produto", example="example"),
                         @OA\Property(property="codigo_net", type="integer", description="Código NET do produto", example=1),
                         @OA\Property(property="ref_sistema", type="string", description="Referência do sistema para o produto", example="example"),
-                        @OA\Property(property="produto", type="string", description="Descrição do produto", example="example"),
                         @OA\Property(property="obra_alocada", type="string", description="Obra onde o produto foi alocado", example="example"),
                         @OA\Property(property="n_fatura", type="string", description="Número da fatura associada ao produto", example="example"),
                         @OA\Property(property="data_enviado", type="string", description="Data de envio do produto", example="2022-01-01"),
