# laravel-json-api/app/Models/Rastreabilidade.php
@@ -11,7 +11,7 @@ class Rastreabilidade extends Model
 
     protected $table = 'rastreabilidades';
 
-    protected $fillable = ['id', 'numero_serie', 'data_geracao', 'responsavel_criacao', 'cliente_id', 'estoque_id', 'pv', 'op', 'codigo_net', 'ref_sistema', 'produto', 'obra_alocada', 'n_fatura', 'data_enviado', 'garantia_dias', 'expira_garantia', 'status_garantia', 'condicao_garantia', 'created_at', 'updated_at'];
+    protected $fillable = ['id', 'numero_serie', 'data_geracao', 'responsavel_criacao', 'cliente_id', 'produto_id', 'pv', 'op', 'codigo_net', 'ref_sistema', 'obra_alocada', 'n_fatura', 'data_enviado', 'garantia_dias', 'expira_garantia', 'status_garantia', 'condicao_garantia', 'created_at', 'updated_at'];
 public $timestamps = true;
 protected $primaryKey = 'id';
 
