# laravel-json-api/storage/api-docs/api-docs.json
@@ -220,173 +220,6 @@
                 }
             }
         },
-        "/api/v2/estoques": {
-            "get": {
-                "summary": "Get all estoques",
-                "description": "Tabela que armazena informações sobre os itens no estoque",
-                "operationId": "bab36cd6b39a748444c62adcc54b393c",
-                "responses": {
-                    "200": {
-                        "description": "Get all estoques"
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a new estoque",
-                "operationId": "c0c982b1c4c723f90dde900747ef13e7",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "id": {
-                                        "description": "Identificador único de cada item no estoque",
-                                        "type": "integer",
-                                        "example": 1
-                                    },
-                                    "ref_sistema": {
-                                        "description": "Referência do sistema para o item",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "ncm": {
-                                        "description": "Código NCM (Nomenclatura Comum do Mercosul) do item",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "produto": {
-                                        "description": "Descrição detalhada do produto",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "created_at": {
-                                        "description": "Data de criação do registro",
-                                        "type": "string",
-                                        "example": "2022-01-01 00:00:00"
-                                    },
-                                    "updated_at": {
-                                        "description": "Data de atualização do registro",
-                                        "type": "string",
-                                        "example": "2022-01-01 00:00:00"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Create a new estoque"
-                    }
-                }
-            }
-        },
-        "/api/v2/estoques/{id}": {
-            "get": {
-                "summary": "Get a estoque by ID",
-                "operationId": "6cc6366fb1750ca1a2163e6c692e4a8e",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "The ID of the estoque",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Get a estoque by ID"
-                    }
-                }
-            },
-            "put": {
-                "summary": "Update a estoque",
-                "operationId": "5d69a5882fce79872147923bc035b546",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "The ID of the estoque",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "id": {
-                                        "description": "Identificador único de cada item no estoque",
-                                        "type": "integer",
-                                        "example": 1
-                                    },
-                                    "ref_sistema": {
-                                        "description": "Referência do sistema para o item",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "ncm": {
-                                        "description": "Código NCM (Nomenclatura Comum do Mercosul) do item",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "produto": {
-                                        "description": "Descrição detalhada do produto",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "created_at": {
-                                        "description": "Data de criação do registro",
-                                        "type": "string",
-                                        "example": "2022-01-01 00:00:00"
-                                    },
-                                    "updated_at": {
-                                        "description": "Data de atualização do registro",
-                                        "type": "string",
-                                        "example": "2022-01-01 00:00:00"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Update a estoque"
-                    }
-                }
-            },
-            "delete": {
-                "summary": "Delete a estoque",
-                "operationId": "eadd57d9170053395d6b58c6445e2583",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "The ID of the estoque",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Delete a estoque"
-                    }
-                }
-            }
-        },
         "/api/failedJobs": {
             "get": {
                 "summary": "Get all failedJobs",
@@ -1665,6 +1498,173 @@
                 }
             }
         },
+        "/api/v2/produtos": {
+            "get": {
+                "summary": "Get all produtos",
+                "description": "Tabela que armazena informações sobre os produtos",
+                "operationId": "a8b60d511431ca391176dec4b8d2f111",
+                "responses": {
+                    "200": {
+                        "description": "Get all produtos"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Create a new produto",
+                "operationId": "40e8fcf31ac5e497af208be4d3c55386",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "Identificador único de cada item no estoque",
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "ref_sistema": {
+                                        "description": "Referência do sistema para o item",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "ncm": {
+                                        "description": "Código NCM (Nomenclatura Comum do Mercosul) do item",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "produto": {
+                                        "description": "Descrição detalhada do produto",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "created_at": {
+                                        "description": "Data de criação do registro",
+                                        "type": "string",
+                                        "example": "2022-01-01 00:00:00"
+                                    },
+                                    "updated_at": {
+                                        "description": "Data de atualização do registro",
+                                        "type": "string",
+                                        "example": "2022-01-01 00:00:00"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Create a new produto"
+                    }
+                }
+            }
+        },
+        "/api/v2/produtos/{id}": {
+            "get": {
+                "summary": "Get a produto by ID",
+                "operationId": "ac3a7b80eab84a344f11ca917077de98",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of the produto",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get a produto by ID"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Update a produto",
+                "operationId": "13ac5e1700aa6cbf837a1bfaa1dde83d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of the produto",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "Identificador único de cada item no estoque",
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "ref_sistema": {
+                                        "description": "Referência do sistema para o item",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "ncm": {
+                                        "description": "Código NCM (Nomenclatura Comum do Mercosul) do item",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "produto": {
+                                        "description": "Descrição detalhada do produto",
+                                        "type": "string",
+                                        "example": "example"
+                                    },
+                                    "created_at": {
+                                        "description": "Data de criação do registro",
+                                        "type": "string",
+                                        "example": "2022-01-01 00:00:00"
+                                    },
+                                    "updated_at": {
+                                        "description": "Data de atualização do registro",
+                                        "type": "string",
+                                        "example": "2022-01-01 00:00:00"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update a produto"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Delete a produto",
+                "operationId": "871198b91a41e81f3c3ceeceef7ef82b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The ID of the produto",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Delete a produto"
+                    }
+                }
+            }
+        },
         "/api/v2/rastreabilidades": {
             "get": {
                 "summary": "Get all rastreabilidades",
@@ -1710,7 +1710,7 @@
                                         "type": "integer",
                                         "example": 1
                                     },
-                                    "estoque_id": {
+                                    "produto_id": {
                                         "description": "Identificador do item no estoque relacionado (FK para estoque)",
                                         "type": "integer",
                                         "example": 1
@@ -1732,11 +1732,6 @@
                                     },
                                     "ref_sistema": {
                                         "description": "Referência do sistema para o produto",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "produto": {
-                                        "description": "Descrição do produto",
                                         "type": "string",
                                         "example": "example"
                                     },
@@ -1864,7 +1859,7 @@
                                         "type": "integer",
                                         "example": 1
                                     },
-                                    "estoque_id": {
+                                    "produto_id": {
                                         "description": "Identificador do item no estoque relacionado (FK para estoque)",
                                         "type": "integer",
                                         "example": 1
@@ -1886,11 +1881,6 @@
                                     },
                                     "ref_sistema": {
                                         "description": "Referência do sistema para o produto",
-                                        "type": "string",
-                                        "example": "example"
-                                    },
-                                    "produto": {
-                                        "description": "Descrição do produto",
                                         "type": "string",
                                         "example": "example"
                                     },
@@ -2121,6 +2111,24 @@
                     "204": {
                         "description": "Delete a user"
                     }
+                }
+            }
+        }
+    },
+    "components": {
+        "responses": {
+            "200": {
+                "description": "Buscar clientes por nome"
+            }
+        },
+        "parameters": {
+            "query": {
+                "name": "query",
+                "in": "query",
+                "description": "Nome do cliente a ser buscado",
+                "required": true,
+                "schema": {
+                    "type": "string"
                 }
             }
         }
